--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,14 +4,12 @@ stages:
   - test
   - deploy
 
-before_script:
-  - pushd ..
-  - if [ -d "RiseClipseDeveloper" ]; then cd RiseClipseDeveloper ; git pull ; else git clone https://gitlab.centralesupelec.fr/RiseClipseGroup/RiseClipseDeveloper.git ; fi
-  - popd
-
 build:
   stage: build
   script:
+    - "pushd .."
+    - "if [ -d RiseClipseDeveloper ]; then cd RiseClipseDeveloper ; git pull ; else git clone https://gitlab.centralesupelec.fr/RiseClipseGroup/RiseClipseDeveloper.git ; fi"
+    - "popd"
     - "mvn clean install"
 
   tags:
