Copyright comment updated

--- a/fr.centralesupelec.edf.riseclipse.main/build.properties
+++ b/fr.centralesupelec.edf.riseclipse.main/build.properties
@@ -1,5 +1,4 @@
-# 
-#  Copyright (c) 2017 CentraleSupÃ©lec & EDF.
+#  Copyright (c) 2018 CentraleSupélec & EDF.
 #  All rights reserved. This program and the accompanying materials
 #  are made available under the terms of the Eclipse Public License v1.0
 #  which accompanies this distribution, and is available at
@@ -8,10 +7,13 @@
 #  This file is part of the RiseClipse tool
 #  
 #  Contributors:
-#      Computer Science Department, CentraleSupÃ©lec : initial implementation
+#      Computer Science Department, CentraleSupélec
+#      EDF R&D
 #  Contacts:
-#      Dominique.Marcadet@centralesupelec.fr
-# 
+#      dominique.marcadet@centralesupelec.fr
+#      aurelie.dehouck-neveu@edf.fr
+#  Web site:
+#      http://wdi.supelec.fr/software/RiseClipse/
 
 source.. = src/
 output.. = bin/
