correct version numbers

--- a/fr.centralesupelec.edf.riseclipse.main/pom.xml
+++ b/fr.centralesupelec.edf.riseclipse.main/pom.xml
@@ -13,7 +13,7 @@
   <parent>
     <groupId>fr.centralesupelec.edf.riseclipse</groupId>
     <artifactId>RiseClipseMain</artifactId>
-    <version>1.0</version>
+    <version>1.0.0-SNAPSHOT</version>
   </parent>
 
 </project>
