--- a/fr.centralesupelec.edf.riseclipse.main/pom.xml
+++ b/fr.centralesupelec.edf.riseclipse.main/pom.xml
@@ -9,7 +9,7 @@
 
   <parent>
     <groupId>fr.centralesupelec.edf.riseclipse</groupId>
-    <artifactId>RiseClipseMain</artifactId>
+    <artifactId>riseclipse-main</artifactId>
     <version>1.0.2-SNAPSHOT</version>
   </parent>
 
