--- a/fr.centralesupelec.edf.riseclipse.main/plugin.xml
+++ b/fr.centralesupelec.edf.riseclipse.main/plugin.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.4"?>
 <!--
-  Copyright (c) 2018 CentraleSupélec & EDF.
-  All rights reserved. This program and the accompanying materials
-  are made available under the terms of the Eclipse Public License v1.0
-  which accompanies this distribution, and is available at
-  http://www.eclipse.org/legal/epl-v10.html
- 
-  This file is part of the RiseClipse tool
-  
-  Contributors:
-      Computer Science Department, CentraleSupélec
-      EDF R&D
-  Contacts:
-      dominique.marcadet@centralesupelec.fr
-      aurelie.dehouck-neveu@edf.fr
-  Web site:
-      http://wdi.supelec.fr/software/RiseClipse/
+*************************************************************************
+**  Copyright (c) 2019 CentraleSupélec & EDF.
+**  All rights reserved. This program and the accompanying materials
+**  are made available under the terms of the Eclipse Public License v2.0
+**  which accompanies this distribution, and is available at
+**  https://www.eclipse.org/legal/epl-v20.html
+** 
+**  This file is part of the RiseClipse tool
+**  
+**  Contributors:
+**      Computer Science Department, CentraleSupélec
+**      EDF R&D
+**  Contacts:
+**      dominique.marcadet@centralesupelec.fr
+**      aurelie.dehouck-neveu@edf.fr
+**  Web site:
+**      http://wdi.supelec.fr/software/RiseClipse/
+*************************************************************************
 -->
 <plugin>
    <extension-point id="meta_models" name="Metamodels for RiseClipse" schema="schema/fr.centralesupelec.edf.riseclipse.exsd"/>
