--- a/fr.centralesupelec.edf.riseclipse.main/build.properties
+++ b/fr.centralesupelec.edf.riseclipse.main/build.properties
@@ -1,5 +1,5 @@
 # *************************************************************************
-# **  Copyright (c) 2019 CentraleSupélec & EDF.
+# **  Copyright (c) 2016-2021 CentraleSupélec & EDF.
 # **  All rights reserved. This program and the accompanying materials
 # **  are made available under the terms of the Eclipse Public License v2.0
 # **  which accompanies this distribution, and is available at
@@ -14,7 +14,7 @@
 # **      dominique.marcadet@centralesupelec.fr
 # **      aurelie.dehouck-neveu@edf.fr
 # **  Web site:
-# **      http://wdi.supelec.fr/software/RiseClipse/
+# **      https://riseclipse.github.io
 # *************************************************************************
 
 
