--- a/fr.centralesupelec.edf.riseclipse.main/plugin.xml
+++ b/fr.centralesupelec.edf.riseclipse.main/plugin.xml
@@ -2,7 +2,7 @@
 <?eclipse version="3.4"?>
 <!--
 *************************************************************************
-**  Copyright (c) 2019 CentraleSupélec & EDF.
+**  Copyright (c) 2016-2021 CentraleSupélec & EDF.
 **  All rights reserved. This program and the accompanying materials
 **  are made available under the terms of the Eclipse Public License v2.0
 **  which accompanies this distribution, and is available at
@@ -17,7 +17,7 @@
 **      dominique.marcadet@centralesupelec.fr
 **      aurelie.dehouck-neveu@edf.fr
 **  Web site:
-**      http://wdi.supelec.fr/software/RiseClipse/
+**      https://riseclipse.github.io
 *************************************************************************
 -->
 <plugin>
