--- a/fr.centralesupelec.edf.riseclipse.main/pom.xml
+++ b/fr.centralesupelec.edf.riseclipse.main/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- 
 *************************************************************************
-**  Copyright (c) 2016-2021 CentraleSupélec & EDF.
+**  Copyright (c) 2016-2022 CentraleSupélec & EDF.
 **  All rights reserved. This program and the accompanying materials
 **  are made available under the terms of the Eclipse Public License v2.0
 **  which accompanies this distribution, and is available at
@@ -27,15 +27,15 @@
 
   <modelVersion>4.0.0</modelVersion>
  
-  <groupId>fr.centralesupelec.edf.riseclipse</groupId>
+  <groupId>io.github.riseclipse</groupId>
   <artifactId>fr.centralesupelec.edf.riseclipse.main</artifactId>
-  <version>1.1.0-SNAPSHOT</version>
+  <version>1.2.0-SNAPSHOT</version>
   <packaging>eclipse-plugin</packaging>
 
   <parent>
-    <groupId>fr.centralesupelec.edf.riseclipse</groupId>
+    <groupId>io.github.riseclipse</groupId>
     <artifactId>riseclipse-main</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.2.0-SNAPSHOT</version>
   </parent>
 
 </project>
