--- a/pom.xml
+++ b/pom.xml
@@ -20,16 +20,13 @@
 *************************************************************************
 -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-                      http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                       http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
  
   <groupId>io.github.riseclipse</groupId>
   <artifactId>riseclipse-main</artifactId>
-  <version>1.2.0-SNAPSHOT</version>
+  <version>1.2.0</version>
   <packaging>pom</packaging>
   
   <parent>
@@ -42,7 +39,7 @@
     <connection>scm:git:git@github.com:riseclipse/riseclipse-main.git</connection>
     <developerConnection>scm:git:git@github.com:riseclipse/riseclipse-main.git</developerConnection>
     <url>https://github.com/riseclipse/riseclipse-main</url>
-    <tag>HEAD</tag>
+    <tag>riseclipse-main-1.2.0</tag>
   </scm>
  
   <modules>
