--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,20 @@
     <tag>HEAD</tag>
   </scm>
  
+  <build>
+    <plugins>
+      <plugin>
+        <!-- Maven don't have access to GITHUB_TOKEN to allow git commands in GitHub actions -->
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <configuration>
+          <pushChanges>false</pushChanges>
+          <localCheckout>true</localCheckout>
+        </configuration>
+      </plugin>
+    </plugins>
+  <build>
+
   <modules>
     <module>fr.centralesupelec.edf.riseclipse.main</module>
   </modules>
