typo in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
         </configuration>
       </plugin>
     </plugins>
-  <build>
+  </build>
 
   <modules>
     <module>fr.centralesupelec.edf.riseclipse.main</module>
