--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
       <plugin>
         <groupId>${maven-group-id}</groupId>
         <artifactId>maven-gpg-plugin</artifactId>
+        <version>${maven-gpg-plugin-version}</version>
         <configuration>
           <skip>true</skip>
         </configuration>
