--- a/.github/workflows/Release-Manual.yml
+++ b/.github/workflows/Release-Manual.yml
@@ -15,14 +15,20 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: Set up JDK 11
+    # https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#Publishing-using-Apache-Maven
+    - name: Set up Apache Maven Central
       uses: actions/setup-java@v2
-      with:
-        java-version: '11'
+      with: # running setup-java again overwrites the settings.xml
         distribution: 'temurin'
+        java-version: '11'
         cache: 'maven'
+        server-id: ossrh # Value of the distributionManagement/repository/id field of the pom.xml
+        server-username: OSSRH_USERNAME # env variable for username in deploy
+        server-password: OSSRH_PASSWORD # env variable for token in deploy
+        gpg-private-key: ${{ secrets.RISECLIPSE_PGP_KEY_PRIVATE }} # Value of the GPG private key to import
+        gpg-passphrase: MAVEN_GPG_PASSPHRASE # env variable for GPG private key passphrase
 
-    - name: Perform Maven Release
+    - name: Prepare Maven Release
       run: |
         git config user.name github-actions
         git config user.email github-actions@github.com
@@ -30,33 +36,22 @@ jobs:
         git switch do_release
         git push --set-upstream origin do_release 
         mvn --batch-mode release:prepare    
-        mvn --batch-mode release:perform -Darguments="-Dmaven.deploy.skip=true"
-        mvn clean
         git push --tags
 
-    # https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#Publishing-using-Apache-Maven
-    - name: Set up Apache Maven Central
-      uses: actions/setup-java@v2
-      with: # running setup-java again overwrites the settings.xml
-        distribution: 'temurin'
-        java-version: '11'
-        server-id: ossrh # Value of the distributionManagement/repository/id field of the pom.xml
-        server-username: OSSRH_USERNAME # env variable for username in deploy
-        server-password: OSSRH_PASSWORD # env variable for token in deploy
-        gpg-private-key: ${{ secrets.RISECLIPSE_PGP_KEY_PRIVATE }} # Value of the GPG private key to import
-        gpg-passphrase: MAVEN_GPG_PASSPHRASE # env variable for GPG private key passphrase
-
     - name: Publish to OSSRH/Apache Maven Central
-      run: mvn deploy
+      run: mvn --batch-mode release:perform
       env:
         OSSRH_USERNAME: ${{ secrets.RISECLIPSE_OSSRH_USERNAME }}
         OSSRH_PASSWORD: ${{ secrets.RISECLIPSE_OSSRH_PASSWORD }}
         MAVEN_GPG_PASSPHRASE: ${{ secrets.RISECLIPSE_PGP_KEY_PASSWORD }}
 
+    - name: Clean before creating PR
+      run: mvn clean
+
     - name: Create Pull Request
       uses: peter-evans/create-pull-request@v4
       with:
-        base: main
+        base: master
         branch: do_release
         labels: automated pr
         title: '[maven-release-plugin] prepare for next development iteration after release'
