--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
   <parent>
     <groupId>io.github.riseclipse</groupId>
     <artifactId>fr.centralesupelec.edf.riseclipse.developer.maven</artifactId>
+    <!-- TO CHANGE TO 1.2.2 WHEN NEXT riseclipse-developer WILL BE DEPLOYED ON MAVEN CENTRAL -->
     <version>1.2.1</version>
   </parent>
 
@@ -41,7 +42,8 @@
     <url>https://github.com/riseclipse/riseclipse-main</url>
     <tag>HEAD</tag>
   </scm>
- 
+
+  <!-- TO REMOVE WHEN NEXT riseclipse-developer WILL BE DEPLOYED ON MAVEN CENTRAL -->
   <build>
     <plugins>
 
