--- a/.github/workflows/Release-On-Maven-Central.yml
+++ b/.github/workflows/Release-On-Maven-Central.yml
@@ -1,8 +1,26 @@
+# *************************************************************************
+# **  Copyright (c) 2022 CentraleSupélec & EDF.
+# **  All rights reserved. This program and the accompanying materials
+# **  are made available under the terms of the Eclipse Public License v2.0
+# **  which accompanies this distribution, and is available at
+# **  https://www.eclipse.org/legal/epl-v20.html
+# ** 
+# **  This file is part of the RiseClipse tool
+# **  
+# **  Contributors:
+# **      Computer Science Department, CentraleSupélec
+# **      EDF R&D
+# **  Contacts:
+# **      dominique.marcadet@centralesupelec.fr
+# **      aurelie.dehouck-neveu@edf.fr
+# **  Web site:
+# **      https://riseclipse.github.io
+# *************************************************************************
+
 name: Release on OSSRH and Maven Central
 
 on:
   workflow_dispatch: # Triggered manually for Release
-  push:
 
 jobs:
   call-release-on-ossrh-and-maven-central-workflow:
