--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
   <parent>
     <groupId>io.github.riseclipse</groupId>
     <artifactId>fr.centralesupelec.edf.riseclipse.developer.maven</artifactId>
-    <!-- TO CHANGE TO 1.2.2 WHEN NEXT riseclipse-developer WILL BE DEPLOYED ON MAVEN CENTRAL -->
+    <!-- TO CHANGE TO 1.2.2 WHEN AVAILABLE ON MAVEN CENTRAL -->
     <version>1.2.1</version>
   </parent>
 
@@ -43,7 +43,7 @@
     <tag>HEAD</tag>
   </scm>
 
-  <!-- TO REMOVE WHEN NEXT riseclipse-developer WILL BE DEPLOYED ON MAVEN CENTRAL -->
+  <!-- TO REMOVE WHEN riseclipse-developer 1.2.2 WHEN AVAILABLE ON MAVEN CENTRAL -->
   <build>
     <plugins>
 
