Refactor build to verify

--- a/.github/workflows/Verify.yml
+++ b/.github/workflows/Verify.yml
@@ -17,9 +17,9 @@
 # **      https://riseclipse.github.io
 # *************************************************************************
 
-name: Build
+name: Verify
 
-# This workflow is triggered on every push to verify that the project builds correctly
+# This workflow is triggered on every push to verify that the project builds correctly and runs Sonar + Unit tests
 
 on: 
   push:
@@ -28,5 +28,5 @@ on:
 
 jobs:
   call-build-workflow:
-    name: Build Project
+    name: Verify Project
     uses: riseclipse/riseclipse-developer/.github/workflows/Shared-Build-Components.yml@workflows/build # CHANGE REFERENCE ONCE MERGED
