remove-pull-request-trigger-of-verify-workflow
useless, push trigger is enough

--- a/.github/workflows/Verify.yml
+++ b/.github/workflows/Verify.yml
@@ -22,9 +22,7 @@ name: Verify
 # This workflow is triggered on every push to verify that the project builds correctly and runs Sonar + Unit tests
 
 on: 
-  push:
-  pull_request:
-    types: [opened, reopened]
+  push
 
 jobs:
   call-verify-workflow:
