--- a/fr.centralesupelec.edf.riseclipse.main/pom.xml
+++ b/fr.centralesupelec.edf.riseclipse.main/pom.xml
@@ -28,6 +28,7 @@
   <artifactId>fr.centralesupelec.edf.riseclipse.main</artifactId>
   <version>1.2.12-SNAPSHOT</version>
   <packaging>eclipse-plugin</packaging>
+  <name>[bundle] RiseClipse Main</name>
 
   <parent>
     <groupId>io.github.riseclipse</groupId>
