corrcet called workflow

--- a/.github/workflows/Release-Snapshot-On-OSSRH.yml
+++ b/.github/workflows/Release-Snapshot-On-OSSRH.yml
@@ -27,7 +27,7 @@ on:
 jobs:
   call-release-snapshot-on-ossrh-workflow:
     name: Release snapshots on OSSRH
-    uses: ./.github/workflows/Shared-Deploy-Snapshot-Components.yml
+    uses: riseclipse/riseclipse-developer/.github/workflows/Shared-Deploy-Snapshot-Components.yml@develop
     with:
       run_sonarqube: false
     secrets:
