--- a/.github/workflows/Verify.yml
+++ b/.github/workflows/Verify.yml
@@ -1,5 +1,5 @@
 # *************************************************************************
-# **  Copyright (c) 2022 CentraleSupélec & EDF.
+# **  Copyright (c) 2022-25 CentraleSupélec & EDF.
 # **  All rights reserved. This program and the accompanying materials
 # **  are made available under the terms of the Eclipse Public License v2.0
 # **  which accompanies this distribution, and is available at
@@ -22,7 +22,9 @@ name: Build
 # This workflow is triggered on every push to verify that the project builds correctly and runs Sonar + Unit tests
 
 on: 
-  push
+  pull_request:
+    branches:
+      - master
 
 jobs:
   call-verify-workflow:
