--- a/.github/workflows/Release-Snapshot-On-OSSRH.yml
+++ b/.github/workflows/Release-Snapshot-On-OSSRH.yml
@@ -33,3 +33,4 @@ jobs:
     secrets:
       RISECLIPSE_OSSRH_USERNAME:   ${{ secrets.RISECLIPSE_OSSRH_USERNAME }}
       RISECLIPSE_OSSRH_PASSWORD:   ${{ secrets.RISECLIPSE_OSSRH_PASSWORD }}
+      SONAR_TOKEN: ${{ secrets.RISECLIPSE_SONAR_TOKEN }}
