end-of-life of OSSRH service

--- a/.github/workflows/Release-Snapshot-On-Maven-Central.yml
+++ b/.github/workflows/Release-Snapshot-On-Maven-Central.yml
@@ -26,11 +26,11 @@ on:
 
 jobs:
   call-release-snapshot-on-ossrh-workflow:
-    name: Release snapshots on OSSRH
+    name: Release snapshots on Maven Central
     uses: riseclipse/riseclipse-developer/.github/workflows/Shared-Deploy-Snapshot-Components.yml@develop
     with:
       run_sonarqube: true
     secrets:
-      RISECLIPSE_OSSRH_USERNAME:   ${{ secrets.RISECLIPSE_OSSRH_USERNAME }}
-      RISECLIPSE_OSSRH_PASSWORD:   ${{ secrets.RISECLIPSE_OSSRH_PASSWORD }}
+      RISECLIPSE_CENTRAL_USERNAME:   ${{ secrets.RISECLIPSE_CENTRAL_USERNAME }}
+      RISECLIPSE_CENTRAL_PASSWORD:   ${{ secrets.RISECLIPSE_CENTRAL_PASSWORD }}
       SONAR_TOKEN: ${{ secrets.RISECLIPSE_SONAR_TOKEN }}
