--- a/.github/workflows/Release-Snapshot-On-Maven-Central.yml
+++ b/.github/workflows/Release-Snapshot-On-Maven-Central.yml
@@ -27,7 +27,7 @@ on:
 jobs:
   call-release-snapshot-on-ossrh-workflow:
     name: Release snapshots on Maven Central
-    uses: riseclipse/riseclipse-developer/.github/workflows/Shared-Deploy-Snapshot-Components.yml@develop
+    uses: riseclipse/riseclipse-developer/.github/workflows/Shared-Deploy-Snapshot-Components.yml@master
     with:
       run_sonarqube: true
     secrets:
